<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MaskedEditTextActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:hint="Your mobile number"
            android:inputType="phone"
            android:singleLine="true" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name_is_suhrobbek" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_mother_is_a_teacher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_stydy_at_the_university" />

    <Button
        android:id="@+id/btnToRussian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change" />
    <Button
        android:id="@+id/btnToEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change2" />


</LinearLayout>